--- a/Frontend/src/components/NavBar.css
+++ b/Frontend/src/components/NavBar.css
@@ -1,6 +1,6 @@
 .navbar-custom {
     background-color: #0b3d91;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgb(255, 0, 0);
 }
 
 .navbar-title {
@@ -56,4 +56,8 @@
 
 .nav-link:hover::after, .dropdown-item:hover::after {
     transform: scaleX(1);
+}
+
+.navbar-toggle {
+    background-color: #ffffff;
 }
